C frame, ready to move to cpp.

--- a/hsrl-frame/AndroidApk/res/values/strings.xml
+++ b/hsrl-frame/AndroidApk/res/values/strings.xml
@@ -1,4 +1,4 @@
 <?xml version="1.0" encoding="utf-8"?>
 <resources>
-    <string name="app_name">Pl546</string>
+    <string name="app_name">hsrl-frame-test</string>
 </resources>
